--- a/app/views/setup/index.html.haml
+++ b/app/views/setup/index.html.haml
@@ -16,7 +16,7 @@
       }
 
   %body
-    = render partial: "application/header"
+    -# = render partial: "application/header"
     = render partial: "application/flashes"
     .container
       .row
@@ -37,9 +37,9 @@
         .col-sm-9
           / Environment Variables
           %h3
-            %a{ name: "env" }Environment Variables
+            -# %a{ name: "env" }Environment Variables
 
-          %pre= @env
+          -# %pre= @env
 
           / rdocs
           - @docs.each do |f|
