--- a/app/views/lead_mailer/send_lead.html.erb
+++ b/app/views/lead_mailer/send_lead.html.erb
@@ -1,4 +1,6 @@
-New Lead!
+@contact_name, 
+
+Please find the details of your new lead below: 
 
 <% @params.each do |key, value| %>
  <%= key.capitalize %>: <%= value %>
